--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongo": "^0.1.0",
+    "mongo": "^0.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
